# amalitech_labs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
demo/: pyproject.toml
demo/starter/: manage.py
demo/starter/myapp/: models.py  urls.py  views.py
demo/starter/myapp/migrations/: 0001_initial.py  0002_todoitem_description.py
demo/starter/myapp/templates/: base.html  todo_form.html  todo_list.html
demo/starter/starter/: asgi.py  settings.py  urls.py  wsgi.py
module_2/resilient_data_importer_cli/: README.md  cli.py  pyproject.toml  users.csv
module_2/resilient_data_importer_cli/context_managers/: file_manager.py
module_2/resilient_data_importer_cli/data/: database.json
module_2/resilient_data_importer_cli/exceptions/: importer_exceptions.py
module_2/resilient_data_importer_cli/models/: user.py
module_2/resilient_data_importer_cli/parsers/: csv_parser.py
module_2/resilient_data_importer_cli/repository/: json_user_repository.py  user_repository.py
module_2/resilient_data_importer_cli/services/: importer_service.py
module_2/resilient_data_importer_cli/tests/: test_cli.py  test_parser.py  test_repository.py  test_service.py
module_2/secure_service_module_with_tdd/: README.md  pyproject.toml
module_2/secure_service_module_with_tdd/src/secure_service_module_with_tdd/: exceptions.py  logging.py  models.py  service.py
module_2/secure_service_module_with_tdd/src/secure_service_module_with_tdd/implementations/: bcrypt_hasher.py  memory_repo.py
module_2/secure_service_module_with_tdd/src/secure_service_module_with_tdd/interfaces/: hasher.py  repository.py
module_2/secure_service_module_with_tdd/tests/: test_logging.py  test_registration.py
module_2/tdd-based_api_service_stub/: .coverage  README.md  pyproject.toml
module_2/tdd-based_api_service_stub/src/: exceptions.py  logger.py  models.py  provider.py  service.py
module_2/tdd-based_api_service_stub/src/tdd_based_api_service_stub/: logger.py  models.py  service.py
module_2/tdd-based_api_service_stub/tests/: conftest.py  test_service.py
module_3/concurrent_file_processor/: README.md  pyproject.toml  requirements.txt
module_3/concurrent_file_processor/src/: __init__.py  async_processor.py  dataset_generator.py  file_downloader.py  file_processor.py  main.py  multiprocessing_processor.py  performance_comparison.py  sequential_processor.py  threading_processor.py  utils.py
module_3/concurrent_file_processor/tests/: __init__.py  test_processors.py
module_3/log_analysis_system/: README.md  generate_sample_logs.py  main.py  pyproject.toml
module_3/log_analysis_system/data/: analysis_report.json
module_3/log_analysis_system/src/: analyzer.py  context_manager.py  models.py  parser.py  utils.py
module_3/log_analysis_system/tests/: test_log_analysis.py
module_3/student_grade_analytics/: README.md  main.py  pyproject.toml
module_3/student_grade_analytics/data/: final_report.json  grades.csv  students.csv
module_3/student_grade_analytics/src/: analytics.py  collections_util.py  file_handler.py  models.py  visualizer.py
module_3/student_grade_analytics/tests/: test_analytics.py
module_4/logistics_backend/: README.md  docker-compose.yml  pyproject.toml  schema.sql
module_4/logistics_backend/src/: benchmark.py  db.py  logic.py  seed_data.py
module_4/social_media_backend/: .env.example  README.md  docker-compose.yml  performance_analysis.py  pyproject.toml  setup_data.py
module_4/social_media_backend/docs/: er_diagram.mermaid
module_4/social_media_backend/src/: main.py
module_4/social_media_backend/src/database/: mongo_logger.py  postgres_db.py  redis_cache.py
module_4/social_media_backend/src/models/: schema.sql
module_4/social_media_backend/src/services/: feed_service.py  post_service.py  user_service.py
module_4/social_media_backend/tests/: test_feed_logic.py  test_pg_transactions.py
module_5/url_shortener/: .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
module_5/url_shortener/api/: auth_serializers.py  auth_views.py  health_views.py  permissions.py  serializers.py  tests.py  urls.py  views.py
module_5/url_shortener/config/: settings.py  urls.py
module_5/url_shortener/core/: exceptions.py  logging.py  middleware.py  models.py
module_5/url_shortener/preview_service/: apps.py  urls.py  views.py
module_5/url_shortener/shortener/: admin.py  apps.py  interfaces.py  models.py  preview_client.py  repositories.py  serializers.py  services.py  signals.py  tasks.py  tests.py  tests_orm.py  tests_preview.py  urls.py  views.py
module_5/url_shortener/shortener/migrations/: 0001_initial.py  0002_seed_tags.py
module_5/url_shortener/shortener/tests/: test_analytics.py  test_auth.py  test_caching.py  test_core.py  test_orm.py  test_services.py  test_tasks.py
