[project]
name = "amalitech-labs"
version = "0.1.0"
description = ""
authors = [
    {name = "JoeBright1619", email = "brightcollin1619@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
namespace_packages = true
exclude = "module_2/(git-powered_configuration_management_cli|multi-stage_data_processing_pipeline|secure_service_module_with_tdd|tdd-based_api_service_stub)/tests"


[dependency-groups]
dev = [
    "mypy (>=1.19.0,<2.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)"
]
