[project]
name = "secure_service_module_with_tdd"
version = "0.1.0"
description = "Secure service module with TDD lab"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-mock (>=3.15.1,<4.0.0)"
]
