[tool.poetry]
name = "concurrent-file-processor"
version = "1.0.0"
description = "Lab 3: Concurrent File Processor with Threading & Multiprocessing"
authors = ["AmaliTech Student"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
Pillow = "^10.0.0"
aiohttp = "^3.9.0"
aiofiles = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
concurrent-processor = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
